# cthulhu_bot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.json  heroku.yml  index.js  index.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
cmd_macro/: Cargo.toml  README.md
cmd_macro/src/: lib.rs
doc/: Privacy_Policy.md  Terms_of_Service.md
src/: client.ts  command_parser.rs  config.rs  database.rs  error.rs  handler.rs  logging.rs  main.rs  user_data.rs
src/@types/: dice-expression-evaluator.d.ts
src/commands/: choose.rs  create_sheet.rs  custom_roll.rs  define.rs  mod.rs  opposed.rs  roll.rs  roll6.rs  set.rs  skill.rs  status.rs  undefine.rs  use_command.rs
