[package]
name = "cthulhu_bot"
version = "2.0.0"
authors = ["Akihisa Yagi <capra314cabra@gmail.com>"]
edition = "2018"
description = "An unofficial Discord bot which helps you to play Cthulhu TRPG. Please note that Chaosium Inc. owns the copyright of Cthulhu TRPG."
repository = "https://github.com/capra314cabra/cthulhu_bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d20 = "0.1.0"
once_cell = "1.9.0"
regex = "1.5.4"
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
