[package]
name = "cthulhu_bot"
version = "2.0.0"
authors = ["Akihisa Yagi <capra314cabra@gmail.com>"]
edition = "2018"
description = "An unofficial Discord bot which helps you to play Cthulhu TRPG. Please note that Chaosium Inc. owns the copyright of Cthulhu TRPG."
repository = "https://github.com/capra314cabra/cthulhu_bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
d20 = "0.1.0"
once_cell = "1.9.0"
rand = "0.8.5"
regex = "1.5.4"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1.30", features = ["rt-multi-thread"] }
cmd_macro = { path = "cmd_macro" }
chrono = "0.4"
