[package]
name = "cthulhu_bot"
version = "3.1.4"
authors = ["Akihisa Yagi <caphosra@gmail.com>"]
edition = "2018"
description = "An unofficial Discord bot which helps you to play Cthulhu TRPG. Please note that Chaosium Inc. owns the copyright of Cthulhu TRPG."
repository = "https://github.com/caphosra/cthulhu_bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
db = ["dep:sqlx"]

[dependencies]
anyhow = "1.0.57"
d20 = "0.1.0"
once_cell = "1.9.0"
rand = "0.8.5"
regex = "1.5.4"
serde = { version = "1.0.195", features=["derive"] }
serde_json = "1.0.111"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
sqlx = { version = "0.8.0", features = [ "runtime-tokio-native-tls" , "postgres" ], optional = true }
tokio = { version = "1.30", features = ["rt-multi-thread"] }
cmd_macro = { path = "cmd_macro" }
chrono = "0.4"
